--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,9 @@
     { 
       "src": "business_card_generator/wsgi.py", 
       "use": "@vercel/python",
+      "config": {
+        "pipInstallArgs": "-e ."
+      }
     }
   ],
   "routes": [
